# sdk

./: README.md
.github/workflows/: release-sdk-js.yml  release-sdk-python.yml  sdk-js.yml  sdk-python.yml
js/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
js/src/: auth.ts  client.ts  errors.ts  index.ts  types.ts
js/test/: auth.test.ts  client.test.ts  fakeServer.ts
python/: CHANGELOG.md  README.md  pyproject.toml
python/src/clessira/: __init__.py  _async_client.py  _auth.py  _base.py  _client.py  errors.py  models.py
python/src/nowdoing/: __init__.py  _async_client.py  _auth.py  _base.py  _client.py  errors.py  models.py
python/tests/: conftest.py  test_auth.py  test_client.py
